# Agile

./: .gitignore  CMakeLists.txt  README.md  main.cpp  serveur.cpp
client/: client  client.cpp
clientudp/: Makefile  UDPClient.cpp  UDPClient.h  client_udp.cpp  clientudp
example-client/: client  client.cpp
example-server/: server  server.cpp
example-server/src/: ArduinoManager.cpp  ArduinoManager.h
server/: Makefile  server  server.cpp
src/: ArduinoManager.cpp  ArduinoManager.h  TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h
test/: client  client.cpp
